<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidLaravel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_message">Android Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="profileImage">Profile Image</string>
    <string name="address">Address</string>

</resources>
